@@ -12,10 +12,12 @@ chmod +x jre-macos64/lib/jspawnhelper
 	--add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED \
 	--add-exports javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED \
 	--add-exports javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED \
+  --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED \
 	--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED \
 	--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED \
 	--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED \
 	--add-opens javafx.graphics/javafx.scene=ALL-UNNAMED \
 	--add-opens javafx.graphics/javafx.scene.text=ALL-UNNAMED \
 	--add-opens javafx.graphics/com.sun.javafx.text=ALL-UNNAMED \
+  --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
 	-Dprism.dirtyopts=false -Dprism.lcdtext=false -cp plugins/*:milkman.jar milkman.MilkmanApplication
